--- a/styles.css
+++ b/styles.css
@@ -2,40 +2,54 @@
 
 * {
     box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
-    background-color: #f7f7f7;
+    margin: 0vh;
+    padding: 0vh;
+    background-color: #e2e2e2;
+    font-family: "roboto", sans-serif;
+}
+
+:root{
+    font-size: 20px;
 }
 
 li, a, button {
-    font-family: "Kenzo ", sans-serif;
+    font-family: "roboto", sans-serif;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 1rem;
     color: #0c0c0c;
     text-decoration: none;
+
+}
+
+.flex{
+    display: flex;
+    padding: 1vh;
+    margin: 1vh;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 header{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 10px 10%;
-
+    padding: 1vh 10%;
 }
 
 .logo{
     cursor: pointer;
     margin-right: auto;
+    
 }
 
-
 .nav_links{
-    list-style: none;
+    list-style:none;
 }
 
 .nav_links li{
     display: inline-block;
-    padding: 0px 20px;
+    padding: 1vh 1vh;
 }
 
 .nav_links li a{
@@ -46,19 +60,14 @@ header{
     color: #0088a9;
 }
 
-.cta{
-    order: 2;
-}
-
 button{
-    margin-left: 20px;
-    padding: 9px 25px;
+    margin-left: 0.5rem;
+    padding: 1vh 2.5vh;
     background-color: rgba(0, 136, 169, 1);
     border: none;
-    border-radius: 50px;
+    border-radius: 5vh;
     cursor: pointer;
     transition: all 0.3s ease 0s;
-    margin-left: 20px;
 }
 
 button:hover{
