--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ li, a, button {
     display: flex;
     padding: 0.5rem;
     margin: 0.5rem;
-    justify-content: center;
+    justify-content: center;    
     align-items: center;
     flex-direction: column;
 }
@@ -77,4 +77,20 @@ button:hover{
 
 .animation{
     transition: all 0.3 ease 0.4;
+}
+
+.center{
+    border: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+.fadein{
+    animation: fadein 4s;
+
+}
+
+@keyframes fadein{
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
